# Y.A.R.T

./: .gitignore  README.md
Challenge1/: Readme.md
Challenge1/cpp_proj/: main  main.cpp  run.sh
Challenge1/justSomeFun/: Cargo.toml
Challenge1/justSomeFun/src/: main.rs
Challenge1/py_proj/: primes.py
Challenge1/rust_proj/: Cargo.toml
Challenge1/rust_proj/src/: main.rs
Challenge2/: Readme.md
Challenge2/cpp_proj/: Readme.md  main.cpp  run.sh
