[package]
name = "primes_with_bits"
version = "0.1.0"
authors = ["another-dark-knight <spandanghosh2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec="0.6"

[profile.dev]
opt-level = 3
overflow-checks = false
